manifests/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-model
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
  - matches:
    - headers:
      - type: Exact
        name: x-router-selected-model
        value: "gpt-4.1"
    backendRefs:
    - name: gpt-4-1
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
  - matches:
    - headers:
      - type: Exact
        name: x-router-selected-model
        value: "gpt-5-mini"
    backendRefs:
    - name: gpt-5-mini
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
  - matches:
    - headers:
      - type: Exact
        name: x-router-selected-model
        value: "gpt-4.1-mini"
    backendRefs:
    - name: gpt-4-1-mini
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
